# sample-restful-openai

./: .dockerignore  Dockerfile  LICENSE  README.md  cloudbuild.yaml  compose.yaml  deploy_cloudrun.sh  environments.py  main.py  openapi.json  openapi.yaml  poetry.toml  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
ai/: app.py  chat.py  engine.py  interface.py  schema.py
tests/ai/: test_interface.py
