[tool.poetry]
name = "sample-restful-openai"
version = "0.1.0"
description = "Sample RESTful API for Open AI"
authors = ["shinyorke <spirits.is.my.rader@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sample_restful_openai"}]

[tool.poetry.dependencies]
python = ">=3.11"
openai = "^0.27.5"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
