[tool.poetry]
name = "sample-restful-openai"
version = "1.0.0"
description = "Sample RESTful API for Open AI"
authors = ["shinyorke <spirits.is.my.rader@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.97.0"
openai = "^0.27.8"
uvicorn = "^0.22.0"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
mypy = "^1.3.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
preview = true

[tool.mypy]
python_version = "3.11"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true
